# library_api

./: README.md  app.py  config.py  pyproject.toml
blueprints/: authors_bp.py  books_bp.py
models/: author.py  book.py
resources/: author_resource.py  book_resource.py
ressources/: book_ressource.py
schemas/: author_schema.py  book_schema.py
