[tool.poetry]
name = "library-api"
version = "0.1.0"
description = ""
authors = ["Amine El amrani <amine_el_amrani@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
marshmallow = "^3.23.0"
flask-marshmallow = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
